[package]
name = "apkeep"
version = "0.14.1"
authors = ["William Budington <bill@eff.org>"]
edition = "2021"
license = "MIT"
description = "A command-line tool for downloading APK files from various sources"
homepage = "https://github.com/EFForg/apkeep"
repository = "https://github.com/EFForg/apkeep"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = { version = "0.3", features = ["io"] }
regex = "1.5"
clap = { version = "4", features = ["derive"] }
gpapi = "4"
tokio-dl-stream-to-disk = { version = "1", features = ["sha256sum"] }
tempfile = "3"
dirs = "4.0"
zip = "0.6"
cryptographic-message-syntax = "0.18"
ring = "0.16"
x509-certificate = "0.15"
simple-error = "0.2"
sha-1 = "0.10"
base64 = "0.20"
serde_json = "1"
hex = "0.4"
rpassword = "7"
configparser = "3.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
